# myovision-data-utils

./: .gitignore  .pre-commit-config.yaml  README.md  clean_masks.py  clean_masks.sh  data_correction.py  data_generator.py  data_generator.yaml  draw_masks.sh  exploratory_analysis.ipynb  mask_generator.py  merge_roi.py  pyproject.toml  requirements.txt  web-app.py
generator_backend/: adg.py  augmenter.py  image.py  model.py  state.py  utils.py
generator_backend/adg/: __init__.py  adg.py  augmenter.py
generator_backend/correction/: visual.py
model/: info.txt
result/: info.txt
static/css/: styles.css
templates/: home.html  image.html  patch.html  state.html
